      flat collection trees, the difference is basically between a small
      incremental scan and a near full rescan.
    * Ask the user for confirmation before refetching lyrics and overwriting
      cached ones.
    * It is now possible to stop editing lyrics without saving changes in
      the lyrics applet.

  BUGFIXES:
    * Automatic playlist scrolling was broken in some cases. (BR 193459)
    * The On Screen Display now uses a sane font size with all display
      resolutions. (BR 195186)
    * Fix rare regression where inaccessible subfolders (due to permissions)
      in the collection could not be picked up by an incremental scan when
      permissions were fixed and their mtime updated, requiring a full rescan.
    * When using a MySQL server with "Watch Folders For Changes" disabled,
      very long periods of idle Amarok could allow the server to close the
      local connection. This is now detected and should be worked around. 
    * Correctly set the lyrics applet's title when displaying HTML formatted lyrics
    * Track selection is now correctly preserved when using Dynamic Playlists.
      Patch by John Atkinson <john@fauxnetic.co.uk>. (BR 208349)
    * Cover Manager no longer stops when one cover cannot be fetched. Patch by
      Tycho Andersen <kdebugs@tycho.ws>. (BR 205032)
    * Magnatune.com store: Fixed problematic use of external unzip command
      for unpacking downloaded album zip files. (BR 138499)
    * Magnatune.com store: Download high quality covers when purchasing or 
      downloading albums. (BR 176177)
    * Correctly modify the Lyrics Applet's title when its state changes.


VERSION 2.2
  CHANGES:
    * The MusicBrainz ID of a track is now scrobbled to Last.fm, if it exists.
      (BR 122281)
    * More collection scanning speedups.

  BUGFIXES:
    * Replay gain works on the Phonon Xine backend.
    * Fadeout on track end works again.
    * Fixed regression where the last album to be scanned would not have its